--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,68 @@
-.page-title{
-    /*SHORTING MARGENS*/
-    margin: 40px auto 5px;
-    padding-left: 10px;
-    width: 80%;
-    font-size: 30pt;
-    font-size: bolt;
-    color:#8e3200;
-   
-}
-h2{
-    margin: 5px auto 25px;
-    padding-left: 10px;
-    width: 80%;
-    font-size: 15pt;
-    color:#8e3200;
-    
-}
-main{
-    width: 80%;
-    margin: 40px auto 5px;
-    padding-left: 10px ;
-}
-    .article-title{
-       
+.page-title {
+        /* SHORTHAND MARGENS*/    
         margin: 40px auto 5px;
         padding-left: 10px;
         width: 80%;
         font-size: 30pt;
-        font-size: bolt;
-        color:#8e3200;
+        font-weight: bold;
+        color: #8E3200;       
     }
+
+h2 {
+        /* margin: 5px auto 25px; */        
+        margin-top: 5px;
+        margin-right: auto;
+        margin-left: auto;
+        margin-bottom: 25px;
+        padding-left: 10px;
+        width: 80%;
+        font-size: 15pt;
+        color: #8E3200;   
+    }    
+
+
+    article{
+    width: 80%;
+    margin: 40px 0 5px;
+    }
+
+    p{
+        margin-top: 20px;
+    }
+
+main{
+    width: 80%;
+    margin: 40px auto 5px;
+    padding-left: 10px;
+}
+
+.article-title {
+    /* SHORTHAND MARGENS*/    
+    margin: 40px auto 5px;    
+    font-size: 22pt;    
+    color: #8E3200;     
+    padding: auto;  
+}
+
+.titulo-produto {
+    /* SHORTHAND MARGENS*/    
+    margin: 40px 0 5px;    
+    font-size: 18pt;
+    font-weight: bold;    
+    color: #ffffff;
+    background-color: #8E3200;
+    padding: 16px;
+}
+
+.imagem-produto{
+    width: 370px;
+}
+.footer {
+    margin: 40px 0 5px;    
+    font-size: 18pt;
+    font-weight: bold;    
+    color: #ffffff;
+    background-color: #8E3200;
+    padding: 20px;
+
+}
