--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Righteous&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 .page-title {
-        /* SHORTHAND MARGENS*/    
+        /* SHORTHAND MARGENS*/  
+        font-family: 'Rubik', sans-serif;   
         margin: 40px auto 5px;
         padding-left: 10px;
         width: 80%;
         font-size: 30pt;
-        font-weight: bold;
+        font-weight: 600;
         color: #8E3200;       
     }
 
 h2 {
-        /* margin: 5px auto 25px; */        
+        /* margin: 5px auto 25px; */
+        font-family: 'Rubik', sans-serif;
+        font-style: italic;         
         margin-top: 5px;
         margin-right: auto;
         margin-left: auto;
@@ -20,15 +25,15 @@ h2 {
         color: #8E3200;   
     }    
 
-
-    article{
+article{
+    font-family: 'Rubik', sans-serif; 
     width: 80%;
     margin: 40px 0 5px;
     }
 
-    p{
-        margin-top: 20px;
-    }
+p{
+    margin-top: 20px;
+}
 
 main{
     width: 80%;
@@ -37,32 +42,46 @@ main{
 }
 
 .article-title {
+    font-family: 'Rubik', sans-serif; 
     /* SHORTHAND MARGENS*/    
     margin: 40px auto 5px;    
     font-size: 22pt;    
-    color: #8E3200;     
-    padding: auto;  
+    color: #8E3200;         
 }
 
 .titulo-produto {
     /* SHORTHAND MARGENS*/    
-    margin: 40px 0 5px;    
-    font-size: 18pt;
-    font-weight: bold;    
+    margin: 40px 0 5px; 
+    font-family: 'Rubik', sans-serif;   
+    font-size: 22pt;
+    font-weight: 600;    
+    font-style: italic;
     color: #ffffff;
     background-color: #8E3200;
-    padding: 16px;
+    padding-top:16px;
+    padding-bottom: 16px;
+    text-align: center;
+    border-radius: 10px;
+    /* box-shadow: inset 2px 2px 3px 3px rgba(0,0,0,0.4); */
+    width: 100%;    
 }
 
 .imagem-produto{
-    width: 370px;
+    width: 370px;    
 }
-.footer {
-    margin: 40px 0 5px;    
-    font-size: 18pt;
-    font-weight: bold;    
-    color: #ffffff;
-    background-color: #8E3200;
-    padding: 20px;
 
+.footer {
+    background-color: #8E3200;
+    color: #ffffff;
+    padding: 20px;  
+    font-family: 'Rubik', sans-serif; 
+    font-size: 18px;  
+    
+}
+
+.container{
+    display: flex;
+    flex-direction:row;
+    justify-content: space-between;
+    align-items: center;
 }
